force-app/main/default/objects/Custom_Search_Field__mdt/Custom_Search_Field__mdt.object-meta.xml
<CustomObject>
    <description>Used to define fields to display / filter on custom search page</description>
    <label>Custom Search Field</label>
    <pluralLabel>Custom Search Fields</pluralLabel>
</CustomObject>