force-app/main/default/objects/Custom_Search_Field__mdt/fields/Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Display_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the field is queried and displayed as a column</description>
    <inlineHelpText>If checked, the field is queried and displayed as a column</inlineHelpText>
    <label>Display Field</label>
    <type>Checkbox</type>
</CustomField>