force-app/main/default/objects/Custom_Search_Field__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Determines the order of the column displayed, field with lowest order is placed on the left</description>
    <inlineHelpText>Determines the order of the column displayed, field with lowest order is placed on the left</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>