force-app/main/default/objects/Custom_Search_Field__mdt/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the field is editable. Note the field must be displayed in order to be edited</description>
    <inlineHelpText>If checked, the field is editable. Note the field must be displayed in order to be edited</inlineHelpText>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>