force-app/main/default/objects/Custom_Search_Field__mdt/fields/Editable_By__c.field-meta.xml
<CustomField>
    <fullName>Editable_By__c</fullName>
    <description>Profiles which can edit the field, separated by comma (,)</description>
    <inlineHelpText>Profiles which can edit the field, separated by comma (,)</inlineHelpText>
    <label>Editable By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>