force-app/main/default/objects/Custom_Search_Field__mdt/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the field is a filterable. Note the field doesn&apos;t need to be displayed</description>
    <inlineHelpText>If checked, the field is a filterable. Note the field doesn&apos;t need to be displayed</inlineHelpText>
    <label>Filter Field</label>
    <type>Checkbox</type>
</CustomField>