force-app/main/default/objects/Custom_Search_Field__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The sobject</description>
    <inlineHelpText>The sobject</inlineHelpText>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Custom_Search_Fields</relationshipLabel>
    <relationshipName>Custom_Search_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>