force-app/main/default/objects/Custom_Search_Field__mdt/fields/Operators__c.field-meta.xml
<CustomField>
    <fullName>Operators__c</fullName>
    <description>The operators available for the filter field. Separate with semicolon (;). Available operators are: equals, greater than, less than, equal to blank, not equal to blank, contains</description>
    <inlineHelpText>The operators available for the filter field. Separate with comma (;). Available operators are: equals, greater than, less than, equal to blank, not equal to blank, contains</inlineHelpText>
    <label>Operators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>