force-app/main/default/objects/Custom_Search_Field__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Display_Field__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Editable__c</columns>
    <columns>Editable_By__c</columns>
    <columns>Filter_Field__c</columns>
    <columns>Operators__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>